<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.posgrad.trabalho1.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/teacher_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_field"
        android:inputType="number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="69dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/teacher_email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="124dp"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/reservation_date"
        android:inputType="text"
        android:onClick="showDatePickerDialog"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="177dp"
        android:layout_below="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/reservation_time"
        android:inputType="text"
        android:onClick="showTimePickerDialog"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="177dp"
        android:layout_below="@+id/editText4"
        android:layout_toRightOf="@+id/editText4"
        android:layout_toEndOf="@+id/editText4" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:entries="@array/labs_array"
        android:prompt="@string/select_lab"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="234dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usa_datashow"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="34dp"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="72dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:layout_editor_absoluteX="272dp"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="344dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="344dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configs"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="266dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Android Studio + Android SDK"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="283dp"
        android:layout_above="@+id/checkBox5"
        android:layout_alignLeft="@+id/checkBox5"
        android:layout_alignStart="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Java SDK"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="315dp"
        android:layout_above="@+id/checkBox3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sistema Operacional Linux"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="343dp"
        android:layout_marginBottom="34dp"
        android:layout_alignBottom="@+id/checkBox6"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sistema Operacional Windows"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="375dp"
        android:layout_marginTop="107dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/checkBox5"
        android:layout_alignStart="@+id/checkBox5" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        tools:layout_editor_absoluteY="416dp"
        tools:layout_editor_absoluteX="161dp"
        android:layout_alignTop="@+id/checkBox4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reserva Prioritaria?"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="431dp"
        android:layout_above="@+id/checkBox6"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="359dp"
        android:layout_height="86dp"
        android:ems="10"
        android:hint="@string/observacoes"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="471dp"
        android:layout_below="@+id/checkBox5"
        android:layout_alignLeft="@+id/checkBox6"
        android:layout_alignStart="@+id/checkBox6"
        android:layout_marginTop="17dp"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="193dp"
        android:layout_height="40dp"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="557dp"
        android:layout_below="@+id/editText7"
        android:layout_toRightOf="@+id/checkBox4"
        android:layout_toEndOf="@+id/checkBox4" />

</RelativeLayout>
